--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -118,6 +118,11 @@
     color: var(--background-color);
  }
 
+ .page-nav {
+     text-align: center;
+     width: 100%;
+ }
+
  @media screen and (max-width: 768px) {
       .navbar {
           flex-direction: column;
