--- a/src/main/resources/templates/boards/board.html
+++ b/src/main/resources/templates/boards/board.html
@@ -5,21 +5,53 @@
     <main class="board-main">
         <div class="container">
             <div>
-                <table class="table table-hover">
-                    <thead>
-                    <tr>
-                        <th>#</th><th>제목</th> <th>작성자</th> <th>작성일</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="board : ${boards}">
-                        <td th:text="${board.id}">id</td>
-                        <td><a th:href="@{|/boards/${board.id}|}"><div th:text="${board.title}"></div></a></td>
-                        <td th:text="${board.userId}"></td>
-                        <td th:text="${#temporals.format(board.createdDate, 'yyyy.MM.dd')}"></td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div th:if="${!boards.isEmpty()}">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>#</th><th>제목</th> <th>작성자</th> <th>작성일</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="board : ${boards}">
+                            <td th:text="${board.id}">id</td>
+                            <td><a th:href="@{|/boards/${board.id}|}"><div th:text="${board.title}"></div></a></td>
+                            <td th:text="${board.userId}"></td>
+                            <td th:text="${#temporals.format(board.createdDate, 'yyyy.MM.dd')}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <hr>
+                    <nav class="page-nav" th:with="
+                            pageNumber = ${pagination.pageNumber},
+                            pageSize = ${pagination.pageSize},
+                            pageStart =${pagination.pageStart},
+                            pageEnd =${pagination.pageEnd},
+                            pagePrevious = ${pagination.pagePrevious},
+                            pageNext = ${pagination.pageNext}"
+                         aria-label="page-nav">
+                        <ul class="pagination">
+                            <th:block th:if="${pagination.hasPrevious}">
+                                <li class="page-item">
+                                    <a class="page-link" th:href="@{|/boards?page=${pagePrevious}&size=${pageSize}|}" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                            </th:block>
+                            <th:block th:each="page : ${#numbers.sequence(pageStart,pageEnd)}">
+                                <li class="page-item"><a class="page-link" th:href="@{|/boards?page=${page}&size=${pageSize}|}" th:text="${page}">number</a></li>
+                            </th:block>
+                            <th:block th:if="${pagination.hasNext}">
+                                <li class="page-item">
+                                    <a class="page-link" th:href="@{|/boards?page=${pageNext}&size=${pageSize}|}" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            </th:block>
+                        </ul>
+                    </nav>
+
+                </div> <!-- th:if -->
                 <hr>
                 <div class="board-btn-group">
                     <a href="/boards/new" role="button" class="btn btn-primary" id="href-board-new">새글</a>
