--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="navbar__menu">
             <li><a href="/">공지사항</a></li>
-            <li><a href="/boards">자유게시판</a></li>
+            <li><a href="/">자유게시판</a></li>
         </ul>
         <ul class="navbar__auth">
             <li><a href="">로그인</a></li>
